--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,52 +11,71 @@
 		$('#user_interests_attributes_0_name').multiselect();
 	});
 </script>
-<div class="container">
-	<div class="row-fluid">
-		<div class="span6 offset3">
-			<div class="login">
-				<h2>Sign up</h2>
 
-				<% resource.interests.build %>
-				<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-				  <%= devise_error_messages! %>
-
-				  <div><%= f.label :name %>
-				  <%= f.text_field :name, :autofocus => true %></div>
-
-				  <div>
-				  	<%= f.label :city %>
-				  	<%= f.text_field :city %>
-				  </div>
-
-				  <div>
-				  	<%= f.label :interests %>
-				  	<%# Todo: Fix the issue where there is an empty {} in the select option below  %>
-				  	<%= f.fields_for :interests do |builder| %>
-					  <% optionsHash = { "ArtAndCulture" => "Art & Culture","EducationAndLearning" => "Education & Learning","HealthAndFitness" => "Health & Fitness", "FoodAndDrink" => "Food & Drink","HobbiesAndCrafts" => "Hobbies & Crafts","MusicAndMovies" => "Music & Movies","EducationAndLearning" => "Education & Learning","OutdoorAndAdventure" => "Outdoor & Adventure","Photography" => "Photography","SportsAndRecreation" => "Sports & Recreation","EntrepreneursAndBusinessNetworking" => "Entrepreneurs & Business Networking","Technology" => "Technology"} %>
-					  <%= builder.select(:name, optionsHash,{},{:multiple=>"multiple", :size=>5}) %>
-					<% end %>
-
-				  </div>
-
-				  <div><%= f.label :email %>
-				  <%= f.email_field :email %></div>
-
-				  <div><%= f.label :password %>
-				  <%= f.password_field :password %></div>
-
-				  <div><%= f.label :password_confirmation %>
-				  <%= f.password_field :password_confirmation %></div>
-
-				  <div><%= f.submit "Sign up", :class => "large awesome green" %></div>
-				<% end %>
-
-				<%= render "devise/shared/links" %>
-			</div>
-			
-
-		</div>
-	</div>
+<div class="loginLogo">
+	<%= image_tag("logo.png")%>
 </div>
 
+<div class="login">
+	<h2>Sign up</h2>
+
+	<% resource.interests.build %>
+
+	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+	  <%= devise_error_messages! %>
+
+	  <div class="input-prepend">
+	  	<%= f.label :name %>
+	  	 <i class="icon-user add-on"></i>
+	  	<%= f.text_field :name, :autofocus => true, :class => "input-block-level width-90-percent" %>
+	  </div>
+
+	  <div class="input-prepend">
+	  	<%= f.label :city %>
+	  	<i class="icon-map-marker add-on"></i>
+	  	<%= f.text_field :city, :class => "input-block-level width-90-percent" %>
+	  </div>
+
+	  <div>
+	  	<%= f.label :interests %>
+	  	<%# Todo: Fix the issue where there is an empty {} in the select option below  %>
+	  	<%= f.fields_for :interests do |builder| %>
+		  <% optionsHash = { "ArtAndCulture" => "Art & Culture","EducationAndLearning" => "Education & Learning","HealthAndFitness" => "Health & Fitness", "FoodAndDrink" => "Food & Drink","HobbiesAndCrafts" => "Hobbies & Crafts","MusicAndMovies" => "Music & Movies","EducationAndLearning" => "Education & Learning","OutdoorAndAdventure" => "Outdoor & Adventure","Photography" => "Photography","SportsAndRecreation" => "Sports & Recreation","EntrepreneursAndBusinessNetworking" => "Entrepreneurs & Business Networking","Technology" => "Technology"} %>
+		  <%= builder.select(:name, optionsHash,{},{:multiple=>"multiple", :size=>5}) %>
+		<% end %>
+
+	  </div>
+	  <br/>
+
+	  <div class="input-prepend">
+	  	<%= f.label :email %>
+	  	<i class="icon-envelope-alt add-on"></i>
+	  	<%= f.email_field :email, :class => "input-block-level width-90-percent" %>
+	  </div>
+
+	  <div class="input-prepend">
+	  	<%= f.label :password %>
+	  	<i class="icon-lock add-on"></i>
+	  	<%= f.password_field :password, :class => "input-block-level width-90-percent" %>
+	  </div>
+
+	  <div class="input-prepend">
+	  	<%= f.label :password_confirmation %>
+	  	<i class="icon-lock add-on"></i>
+	  	<%= f.password_field :password_confirmation, :class => "input-block-level width-90-percent" %>
+	  </div>
+
+	  <div><%= f.submit "Sign up", :class => "css3-button css3-button_pink loginButton input-block-level width-95-percent" %></div>
+	<% end %>
+
+
+	<div class="facebookLoginDivider">
+		<div class="or">
+			Or
+		</div>
+	</div>
+
+	<%= render "devise/shared/links" %>
+</div>
+			
 
