--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -219,7 +219,7 @@ body
 			background-color: white;
 			position: absolute;
 			top: 11px;
-			left: 50%;
+			left: 45%;
 			font-weight: bold;
 			font-size: 18px;
 		}
@@ -233,6 +233,25 @@ body
 		{
 			padding-bottom: 5px;
 			margin-left: 5px;
+		}
+	}
+	.loginFooter
+	{
+		background: $brand_color;
+		margin: 30px -10px -10px -10px;
+		padding: 10px;
+		color: white;
+		font-weight: bold;
+		text-align: center;
+		.linksDivider
+		{
+			margin: 0 10px;
+			display: inline;
+		}
+		a
+		{
+			color: white;
+		
 		}
 	}
 }
