--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,7 +1,7 @@
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <%= link_to omniauth_authorize_path(resource_name, provider), :class=>"css3-button css3-button_blue loginWithFacebook width-90-percent" do %>
-    	Signin with <%= image_tag("facebookLogo.png") %>	
+    	Sign in with <%= image_tag("facebookLogo.png") %>	
     <%end%>
   <% end -%>
 <% end -%>
@@ -10,13 +10,18 @@
   <%= link_to "Sign in", new_session_path(resource_name) %><br />
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
-<% end -%>
+<div class="loginFooter">
+	<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+	  <%= link_to "Sign up", new_registration_path(resource_name) %>
+	<% end -%>
+	<div class="linksDivider">
+		|
+	</div>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end -%>
+	<%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
+	  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
+	<% end -%>
+</div>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
