Before rerunning the devise generator to try and fix the issue where the omniauth callback is not working when the login with facebook link is moved to the homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,8 +10,9 @@
     <p>
         Find people that share your interest and meet them over great food in one of our events.
     </p>
-    <a href="#" class="css3-button css3-button_blue homepageSignup">Signup with <%= image_tag("facebookLogo.png")%></a>
-    <a href="" class="css3-button css3-button_pink homepageSignup">Signup with Email</a>
+    
+    <a href="<%= user_omniauth_authorize_path(:facebook) %>" class="css3-button css3-button_blue homepageSignup">Signup with <%= image_tag("facebookLogo.png")%></a>
+    <a href="<%= new_user_registration_path %>" class="css3-button css3-button_pink homepageSignup">Signup with Email</a>
 <% end %>
 
 <div class="row-fluid">
