--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,28 @@
-<div class="container">
-	<div class="row-fluid">
-		<div class="span12">
-			
-		<h2>Forgot your password?</h2>
+<div class="loginLogo">
+	<%= image_tag("logo.png")%>
+</div>
 
-		<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<div class="login">
+	<h2>Forgot your password?</h2>
+
+	<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
 		  <%= devise_error_messages! %>
 
-		  <div><%= f.label :email %>
-		  <%= f.email_field :email, :autofocus => true %></div>
+		  <div class="input-prepend">
+		  	<%= f.label :email %>
+		  	<i class="icon-envelope-alt add-on"></i>
+		  	<%= f.email_field :email, :autofocus => true, :class => "input-block-level width-90-percent" %>
+		  </div>
 
-		  <div><%= f.submit "Send me reset password instructions", :class => "large awesome green" %></div>
+		  <div><%= f.submit "Send me reset instructions", :class => "css3-button css3-button_pink loginButton input-block-level width-95-percent" %></div>
 		<% end %>
 
-		<%= render "devise/shared/links" %>
-
+	<div class="facebookLoginDivider">
+		<div class="or">
+			Or
 		</div>
 	</div>
+
+	<%= render "devise/shared/links" %>
 </div>
+		
