--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -6,19 +6,29 @@
   <% end -%>
 <% end -%>
 
-<%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name) %><br />
-<% end -%>
+
 
 <div class="loginFooter">
+	<%- if controller_name != 'sessions' %>
+	  <%= link_to "Sign in", new_session_path(resource_name) %>
+	  <% if devise_mapping.recoverable? && controller_name != 'passwords' %>
+	  <% else %>
+	  	<div class="linksDivider">
+			|
+		</div>
+	  <% end %>
+	  
+	<% end -%>
+
 	<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
 	  <%= link_to "Sign up", new_registration_path(resource_name) %>
 	<% end -%>
-	<div class="linksDivider">
-		|
-	</div>
+	
 
 	<%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
+		<div class="linksDivider">
+			|
+		</div>
 	  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
 	<% end -%>
 </div>
